Project pages well under way

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -499,7 +499,7 @@
                   <div class="dividewhite1"></div>
                   <div class="portfolio-date">
                       <p><span class="icon-clock"></span>  Nov 2013</p>
-                      <p><span class="icon-tag"></span> .Net | Bootstrap | AngularJS</p>
+                      <p><span class="icon-tag"></span> .Net | Bootstrap | KnockoutJS</p>
                   </div>
               </div>
           </div>
@@ -519,7 +519,7 @@
                   <div class="dividewhite1"></div>
                   <div class="portfolio-date">
                       <p><span class="icon-clock"></span>  Sept 2015</p>
-                      <p><span class="icon-tag"></span> NodeJS | Bootstrap</p>
+                      <p><span class="icon-tag"></span> NodeJS | ExpressJS | Bootstrap</p>
                   </div>
               </div>
           </div>
@@ -535,11 +535,11 @@
             </figure>
               <div class="portfolio-caption">
                   <h4 class="font-accident-one-normal uppercase"><a hred="/nodetracker">Node | Tracker</a></h4>
-                  <p>Marine mammal tracking platform</p>
+                  <p>Marine Mammal Tracking Platform</p>
                   <div class="dividewhite1"></div>
                   <div class="portfolio-date">
                       <p><span class="icon-clock"></span>  pre alpha release</p>
-                      <p><span class="icon-tag"></span> NodeJS | Bootstrap | AngularJS</p>
+                      <p><span class="icon-tag"></span> NodeJS | ExpressJS | AngularJS</p>
                   </div>
               </div>
           </div>
