--- a/views/nodetracker.ejs
+++ b/views/nodetracker.ejs
@@ -202,62 +202,21 @@
 
           <div id="posts" class="row">
 
-            <div id="1" class="item web col-md-3 nopadding">
+            <div id="1" class="item web col-md-4 col-md-offset-4 nopadding">
               <div class="item-wrap">
                 <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/01.jpg" alt="img11"/>
+                  <img src="/images/webenabled-site.jpg" alt="img11"/>
                   <figcaption>
-                    <h3>Music <span>Sounds</span></h3>
-                    <p>Mitrastigma was a monotypic genus of flowering plants in the </p>
-                    <a href="portfolio-item.html">View more</a>
+                    <h3>WebEnabled <span>Website</span></h3>
+                    <p>This website and how it was built</p>
+                    <a href="/website">View more</a>
                   </figcaption>
                 </figure>
               </div>
             </div>
-
-            <div id="2" class="item web col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/02.jpg" alt="img03"/>
-                  <figcaption>
-                    <h3>Fire <span>Burns</span></h3>
-                    <p>Red Rosa may refer to: Inga bella is a species of legume</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-            <div id="3" class="item marketing col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/03.jpg" alt="img11"/>
-                  <figcaption>
-                    <h3>Ice <span>Cold</span></h3>
-                    <p>Ciani's career begun when he won second prize at the Liszt-Bartók</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-
-            <div id="4" class="item marketing col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/04.jpg" alt="img03"/>
-                  <figcaption>
-                    <h3>Everybody <span>Lies</span></h3>
-                    <p>His repertoire was broad and diverse for a pianist of his age</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-
           </div>
-
         </div>
       </div>
-
     </div>
 
 
