--- a/views/website.ejs
+++ b/views/website.ejs
@@ -129,7 +129,7 @@
             <div class="col-md-12">
               <div class="row">
                 <div class="col-md-8">
-                  <img src="assets/custom/images/magazine/01.jpg" class="img-responsive" alt="img11"/>
+                  <img src="/images/nodejs.jpg" class="img-responsive" alt="img11"/>
                 </div>
                 <div class="col-md-4">
                   <div class="row">
@@ -139,20 +139,20 @@
                         <div class="infoblock">
                             <hr>
                             <ul>
-                                <li>Project Category: <span>Web Design</span></li>
-                                <li>Client: <span>Ergotron LLC</span></li>
-                                <li>Start Date: <span>11.14.2014</span></li>
-                                <li>End Date: <span>12.02.2014</span></li>
+                                <li>Project Category: <span>NodeJS | ExpressJS | Bootstrap</span></li>
+                                <li>Client: <span>In house</span></li>
+                                <li>Start Date: <span>21.09.2015</span></li>
+                                <li>End Date: <span>23.09.2015</span></li>
                             </ul>
                         </div>
                         <h5 class="font-accident-one-medium uppercase">Project Features</h5>
                         <div class="infoblock">
                             <hr>
                             <ul class="list-o">
-                                <li>Sed laoreet lacinia eros et mattis.</li>
-                                <li>Etiam hendrerit</li>
-                                <li>Cras pharetra suscipit tempus.</li>
-                                <li>Sed laoreet lacinia eros et mattis.</li>
+                                <li>Uses Express generator with EJS templates</li>
+                                <li>Uses the Bootstrap theme Electric</li>
+                                <li>Allows me play without clients (sorry)</li>
+                                <li>Lets me do some pixel pushing</li>
                             </ul>
                         </div>
                       </div>
@@ -171,13 +171,14 @@
             <div class="col-md-12">
               <h3 class="font-accident-one-medium uppercase">Overview</h3>
               <p>
-                The organization was founded by Mrs. Ethel Brogan, a native of Armagh,
-                Northern Ireland who learned Irish by spending one month each summer in the Gaeltacht.
-                She emigrated to New York City in 1946 and eventually moved to upstate New York.
-                In the United States, Brogan began teaching Irish classes for the benefit of interested neighbors.
-                In 1981, she arranged the first "Gaeltacht Weekend" in New York for students to improve their
-                Irish language skills through total immersion.
+                I've been doing .Net for years now and it's time for a change.  I've also been doing JavaScript for
+                  almost 20 years too and it's a really exciting time for JS so it's time to join the party.  I'm start
+                  an <a href="/nodetracker">open source project</a> but here I can play.  So over the coming months I
+                  will slowly make the site more dynamic.
               </p>
+                <p>
+                    This site is open source too, you can find the code <a href="https://github.com/jolySoft/webenabled.tv">here</a>
+                </p>
             </div>
           </div>
 
@@ -201,63 +202,21 @@
           <div class="dividewhite3"></div>
 
           <div id="posts" class="row">
-
-            <div id="1" class="item web col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/01.jpg" alt="img11"/>
-                  <figcaption>
-                    <h3>Music <span>Sounds</span></h3>
-                    <p>Mitrastigma was a monotypic genus of flowering plants in the </p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
+              <div id="1" class="item marketing col-md-4 col-md-offset-4 nopadding">
+                  <div class="item-wrap">
+                      <figure class="effect-goliath">
+                          <img src="/images/node-tracker-logo.jpg" alt="img11"/>
+                          <figcaption>
+                              <h3>Node | <span>Tracker</span></h3>
+                              <p>Marine Mammal Tracking Platform</p>
+                              <a href="/nodetracker">View more</a>
+                          </figcaption>
+                      </figure>
+                  </div>
               </div>
-            </div>
-
-            <div id="2" class="item web col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/02.jpg" alt="img03"/>
-                  <figcaption>
-                    <h3>Fire <span>Burns</span></h3>
-                    <p>Red Rosa may refer to: Inga bella is a species of legume</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-            <div id="3" class="item marketing col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/03.jpg" alt="img11"/>
-                  <figcaption>
-                    <h3>Ice <span>Cold</span></h3>
-                    <p>Ciani's career begun when he won second prize at the Liszt-Bartók</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-
-            <div id="4" class="item marketing col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/04.jpg" alt="img03"/>
-                  <figcaption>
-                    <h3>Everybody <span>Lies</span></h3>
-                    <p>His repertoire was broad and diverse for a pianist of his age</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-
           </div>
-
         </div>
       </div>
-
     </div>
 
 
