--- a/views/arc.ejs
+++ b/views/arc.ejs
@@ -120,7 +120,7 @@
         <div class="container">
 
           <h2 class="font-accident-one-bold uppercase">
-            Some Web-design Project
+            Clarksons | Arc
           </h2>
           <div class="dividewhite2"></div>
 
@@ -129,7 +129,7 @@
             <div class="col-md-12">
               <div class="row">
                 <div class="col-md-8">
-                  <img src="assets/custom/images/magazine/01.jpg" class="img-responsive" alt="img11"/>
+                  <img src="/images/arc.png" class="img-responsive" alt="img11"/>
                 </div>
                 <div class="col-md-4">
                   <div class="row">
@@ -139,30 +139,28 @@
                         <div class="infoblock">
                             <hr>
                             <ul>
-                                <li>Project Category: <span>Web Design</span></li>
-                                <li>Client: <span>Ergotron LLC</span></li>
-                                <li>Start Date: <span>11.14.2014</span></li>
-                                <li>End Date: <span>12.02.2014</span></li>
+                                <li>Project Category: <span>.Net | Bootstrap | AngularJS</span></li>
+                                <li>Client: <span>Clarksons Platou</span></li>
+                                <li>Start Date: <span>April 2015</span></li>
+                                <li>End Date: <span>August 2015</span></li>
                             </ul>
                         </div>
                         <h5 class="font-accident-one-medium uppercase">Project Features</h5>
                         <div class="infoblock">
                             <hr>
                             <ul class="list-o">
-                                <li>Sed laoreet lacinia eros et mattis.</li>
-                                <li>Etiam hendrerit</li>
-                                <li>Cras pharetra suscipit tempus.</li>
-                                <li>Sed laoreet lacinia eros et mattis.</li>
+                                <li>Multi-vessel and destination voyage estimation</li>
+                                <li>Distance calculation</li>
+                                <li>Complex ETL synchronisation with poor data sources</li>
+                                <li>Responsive design for use on multiple form factors</li>
                             </ul>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-
               </div>
             </div>
-
           </div>
 
           <div class="dividewhite2"></div>
@@ -171,22 +169,73 @@
             <div class="col-md-12">
               <h3 class="font-accident-one-medium uppercase">Overview</h3>
               <p>
-                The organization was founded by Mrs. Ethel Brogan, a native of Armagh,
-                Northern Ireland who learned Irish by spending one month each summer in the Gaeltacht.
-                She emigrated to New York City in 1946 and eventually moved to upstate New York.
-                In the United States, Brogan began teaching Irish classes for the benefit of interested neighbors.
-                In 1981, she arranged the first "Gaeltacht Weekend" in New York for students to improve their
-                Irish language skills through total immersion.
+                Clarksons are a very old shipping brokerage, about 180 years old.  However their development team is
+                  relatively new, about 6 years old.  Over the years they have a disparate set of legacy desktop
+                  application to support both estimation and fixture.  In addition each department had their own set of
+                  these applications.  Arc is the replacement for all of these.
               </p>
+                <p>
+                    When I joined the project it had already been up and running for a year with a live system
+                    supporting about 100 users.  However in the rush to fulfill business need and with the previously
+                    tech lead leaving the code base in a sub-optimal state there were going to be some very large refactors
+                    in order to reduce cost of ownership and leave the code base in a malleable state.
+                </p>
+                <h3 class="font-accident-one-medium uppercase">Approach</h3>
+                <p>
+                    After spending sometime assessing the state of play, the first port of call was identify the baby from
+                    the bath water and ensure the right one was disposed of.  The general architecture and framework
+                    selection was sound but there were no use of SOLID and the onion separation of DDD had was completely
+                    ignored.  In addition to this the EF implementation was using an EDMX causing collition between
+                    engineers in the team.  Because of the EDMX the domain was split over 2 assemblies using partial
+                    classes.  This had lead to application service to be place in the web api controller where repositories
+                    were called directly.
+                </p>
+                <p>
+                    The EDMX had to go.  It was the root of all evil but with 136 domain entities and all the places
+                    these were used it was not easy.  In fact it was one of the biggest and most complex refactors for me
+                    to date.  The code was littered with code smells but arrow code was by far the largest with lots of
+                    methods over 800 line and a couple over 1500.  These were broken down and in some case a single
+                    method became multiple classes.  Before an individual refactoring took place any test that could be
+                    put in were but because the poor code design this was rarely possible.  However as a method became
+                    multiple public classes, meaningfull AAA unit test were implement in a red green manor if possible.
+                    Over my time the test cover increased 4 fold.
+                </p>
+                <p>
+                    Next step was to have a look at the Angular/TypeScript implementation.  This was in a better shape
+                    but some golden rules had been broken that was stopping an unit testing being implemented.  It was
+                    obvious this was due to some global variables and while test could have been put in the set for each
+                    BDD fixture made this prohibitive.  Once removed the jasmine/karma implementation went pretty smoothly.
+                </p>
+                <h3 class="font-accident-one-medium uppercase">Technologies</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul>
+                                <li>.Net 4.5</li>
+                                <li>Web Api 2.2</li>
+                                <li>Entity Framework 6</li>
+                                <li>Sql Server 2012</li>
+                                <li>AngularJS 1.3</li>
+                                <li>TypeScript</li>
+                                <li>nUnit</li>
+                                <li>Ninject</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul>
+                                <li>Jasmine</li>
+                                <li>Karma</li>
+                                <li>Lucene.Net</li>
+                                <li>Windows Service</li>
+                                <li>CesiumJS</li>
+                                <li>OpenLayers</li>
+                                <li>Fake It Easy</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
           </div>
-
-
-
-
-
-
-
         </div>
       </div>
 
@@ -194,9 +243,9 @@
 
         <div class="container isotope-container">
 
-          <h3 class="font-accident-one-bold uppercase">Related Products</h3>
+          <h3 class="font-accident-one-bold uppercase">Related Projects</h3>
           <p>
-            The contribution winning the FACE award is selected by a jury from the entries in the <br>"Human Rights in Cinema" section of the festival. This includes both documentaries and feature <br>films investigating social change and individual dramas.
+            Here are some projects that use similar technologies
           </p>
           <div class="dividewhite3"></div>
 
@@ -204,11 +253,11 @@
             <div id="1" class="item web col-md-3 nopadding">
               <div class="item-wrap">
                 <figure class="effect-goliath">
-                  <img src="/images/ship-bow.jpg" alt="img03"/>
+                  <img src="/images/node-tracker-logo.jpg" alt="img03"/>
                   <figcaption>
-                      <h3>Clarksons | <span>Arc</span></h3>
-                      <p>Voyage estimation and fixture management for brokering</p>
-                      <a href="/arc">View more</a>
+                      <h3>Node | <span>Tracker</span></h3>
+                      <p>Marine Mammal Tracking Platform</p>
+                      <a href="/nodetracker">View more</a>
                   </figcaption>
                 </figure>
               </div>
