--- a/views/bento.ejs
+++ b/views/bento.ejs
@@ -129,7 +129,7 @@
             <div class="col-md-12">
               <div class="row">
                 <div class="col-md-8">
-                  <img src="assets/custom/images/magazine/01.jpg" class="img-responsive" alt="img11"/>
+                  <img src="/images/crowds-bookmakers-pe.jpg" class="img-responsive" alt="img11"/>
                 </div>
                 <div class="col-md-4">
                   <div class="row">
@@ -139,20 +139,21 @@
                         <div class="infoblock">
                             <hr>
                             <ul>
-                                <li>Project Category: <span>Web Design</span></li>
-                                <li>Client: <span>Ergotron LLC</span></li>
-                                <li>Start Date: <span>11.14.2014</span></li>
-                                <li>End Date: <span>12.02.2014</span></li>
+                                <li>Project Category: <span>.Net | Bootstrap | AngularJS</span></li>
+                                <li>Client: <span>BetClearer</span></li>
+                                <li>Start Date: <span>May 2013</span></li>
+                                <li>End Date: <span>November 2013</span></li>
                             </ul>
                         </div>
                         <h5 class="font-accident-one-medium uppercase">Project Features</h5>
                         <div class="infoblock">
                             <hr>
                             <ul class="list-o">
-                                <li>Sed laoreet lacinia eros et mattis.</li>
-                                <li>Etiam hendrerit</li>
-                                <li>Cras pharetra suscipit tempus.</li>
-                                <li>Sed laoreet lacinia eros et mattis.</li>
+                                <li>Integration with 3rd party bookmaking platform</li>
+                                <li>Price imports from screen scrapping</li>
+                                <li>3rd party agent management for online account creation</li>
+                                <li>Account P&L management</li>
+                                <li>Hedge management</li>
                             </ul>
                         </div>
                       </div>
@@ -171,13 +172,64 @@
             <div class="col-md-12">
               <h3 class="font-accident-one-medium uppercase">Overview</h3>
               <p>
-                The organization was founded by Mrs. Ethel Brogan, a native of Armagh,
-                Northern Ireland who learned Irish by spending one month each summer in the Gaeltacht.
-                She emigrated to New York City in 1946 and eventually moved to upstate New York.
-                In the United States, Brogan began teaching Irish classes for the benefit of interested neighbors.
-                In 1981, she arranged the first "Gaeltacht Weekend" in New York for students to improve their
-                Irish language skills through total immersion.
+                  The business model for BetClearer was simple. Take the top sporting gamblers in the UK and provide a
+                  means for them to place large bets, something that traditionally was difficult but could be solve with
+                  technology.  This something the big bookmakers active protect against and would eventually mean the
+                  end of BetClearer.  While some might say this was not the most ethical project I've worked on, I found
+                  it incredibly interesting from an engineering point of view.
               </p>
+                <h3 class="font-accident-one-medium uppercase">Tech leading</h3>
+                <p>
+                    This was a classic tech lead job starting on a greenfield project; framework selection, process
+                    and standards setting, mentoring, coding and reviewing.  It was a team of 8 very skilled engineers
+                    and I learnt loads off them.  This was the first time any of them had used AngularJS or implemented a
+                    SPA and their rate of take up was impressive.  There was a little resistance to red/green and high
+                    test coverage from some quarters but this some subsided after a couple of weeks with no debugging.
+                    Sometimes you luck out with a team and this was one of them, would love to build something else with
+                    this lot again sometime.
+                </p>
+                <h3 class="font-accident-one-medium uppercase">Architecture</h3>
+                <p>
+                    It was a bit like tin cans and string so I'll put this as simply as I can. Firstly a little overview
+                    of the process; BetClearer have a list of people who never use bookmakers and agree, for a fee, to
+                    let BetClearer uss their details to place bets.  A stake comes in, it is then place over multiple
+                    online accounts using the agents.  It wins, the money is recouped (or not as it happened) and the
+                    winnings are paid back minus a commission.
+                    </p>
+                <p>
+                    The core bookmaking platform was LVS's SportsBook, this handled the individual bets dividend calculation and execpt a
+                    pricing feed from Bento.  Bento spoke to SportsBook through a restful api and cached individual hedges
+                    again the true stake.  Behind Bento's API was a windows service.  This service employed Selenium to
+                    scrape price off the bookie and place then both in Bento and SportsBook, it ran continuously.  Bento
+                    also used the information it had through it agent management and the screen scrapping service to
+                    place the hedges too.
+                </p>
+                <h3 class="font-accident-one-medium uppercase">Technologies</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul>
+                                <li>.Net 4.5</li>
+                                <li>Web Api 2.2</li>
+                                <li>Autofac</li>
+                                <li>Entity Framework 6</li>
+                                <li>Sql Server 2012</li>
+                                <li>TeamCity</li>
+                                <li>Octopus</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul>
+                                <li>Fake It Easy</li>
+                                <li>nUnit</li>
+                                <li>Jasmine</li>
+                                <li>Karma</li>
+                                <li>AngularJS 1.3</li>
+                                <li>SpecFlow</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
           </div>
         </div>
@@ -193,60 +245,57 @@
           </p>
           <div class="dividewhite3"></div>
 
-          <div id="posts" class="row">
+            <div id="posts" class="row">
+                <div id="1" class="item web col-md-3 nopadding">
+                    <div class="item-wrap">
+                        <figure class="effect-goliath">
+                            <img src="/images/ship-bow.jpg" alt="img03"/>
+                            <figcaption>
+                                <h3>Clarksons | <span>Arc</span></h3>
+                                <p>Voyage estimation and fixture management for brokering</p>
+                                <a href="/arc">View more</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
+                <div id="2" class="item marketing col-md-3 nopadding">
+                    <div class="item-wrap">
+                        <figure class="effect-goliath">
+                            <img src="/images/node-tracker-logo.jpg" alt="img11"/>
+                            <figcaption>
+                                <h3>Node | <span>Tracker</span></h3>
+                                <p>Marine Mammal Tracking Platform</p>
+                                <a href="/nodetracker">View more</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
 
-            <div id="1" class="item web col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/01.jpg" alt="img11"/>
-                  <figcaption>
-                    <h3>Music <span>Sounds</span></h3>
-                    <p>Mitrastigma was a monotypic genus of flowering plants in the </p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
+                <div id="3" class="item marketing col-md-3 nopadding">
+                    <div class="item-wrap">
+                        <figure class="effect-goliath">
+                            <img src="/images/double-helex.jpg" alt="img03"/>
+                            <figcaption>
+                                <h3>CRUK | <span>StratMed</span></h3>
+                                <p>Betting brokage platform for spread betting</p>
+                                <a href="/stratmed">View more</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
+                <div id="4" class="item web col-md-3 nopadding">
+                    <div class="item-wrap">
+                        <figure class="effect-goliath">
+                            <img src="/images/racing-horse.jpg" alt="img11"/>
+                            <figcaption>
+                                <h3>SIS | <span>Editor</span></h3>
+                                <p>Gene matching software for clinical trials</p>
+                                <a href="/siseditor">View more</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
             </div>
-
-            <div id="2" class="item web col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/02.jpg" alt="img03"/>
-                  <figcaption>
-                    <h3>Fire <span>Burns</span></h3>
-                    <p>Red Rosa may refer to: Inga bella is a species of legume</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-            <div id="3" class="item marketing col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/03.jpg" alt="img11"/>
-                  <figcaption>
-                    <h3>Ice <span>Cold</span></h3>
-                    <p>Ciani's career begun when he won second prize at the Liszt-Bartók</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-
-            <div id="4" class="item marketing col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/04.jpg" alt="img03"/>
-                  <figcaption>
-                    <h3>Everybody <span>Lies</span></h3>
-                    <p>His repertoire was broad and diverse for a pianist of his age</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-
-          </div>
 
         </div>
       </div>
