--- a/views/siseditor.ejs
+++ b/views/siseditor.ejs
@@ -129,7 +129,7 @@
             <div class="col-md-12">
               <div class="row">
                 <div class="col-md-8">
-                  <img src="assets/custom/images/magazine/01.jpg" class="img-responsive" alt="img11"/>
+                  <img src="/images/sis.jpg" class="img-responsive" alt="img11"/>
                 </div>
                 <div class="col-md-4">
                   <div class="row">
@@ -139,30 +139,30 @@
                         <div class="infoblock">
                             <hr>
                             <ul>
-                                <li>Project Category: <span>Web Design</span></li>
-                                <li>Client: <span>Ergotron LLC</span></li>
-                                <li>Start Date: <span>11.14.2014</span></li>
-                                <li>End Date: <span>12.02.2014</span></li>
+                                <li>Project Category: <span>.Net | Bootstrap | KnockoutJS</span></li>
+                                <li>Client: <span>SatelliteInformation Systems</span></li>
+                                <li>Start Date: <span>January 2011</span></li>
+                                <li>End Date: <span>MAy 2013</span></li>
                             </ul>
                         </div>
                         <h5 class="font-accident-one-medium uppercase">Project Features</h5>
                         <div class="infoblock">
                             <hr>
                             <ul class="list-o">
-                                <li>Sed laoreet lacinia eros et mattis.</li>
-                                <li>Etiam hendrerit</li>
-                                <li>Cras pharetra suscipit tempus.</li>
-                                <li>Sed laoreet lacinia eros et mattis.</li>
+                                <li>Racecard management</li>
+                                <li>Day of racing management including tisue pricing</li>
+                                <li>Starting price management</li>
+                                <li>Resulting and dividend calculation</li>
+                                <li>Feed trigger management</li>
+                                <li>Message sequence control</li>
                             </ul>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-
               </div>
             </div>
-
           </div>
 
           <div class="dividewhite2"></div>
@@ -171,21 +171,50 @@
             <div class="col-md-12">
               <h3 class="font-accident-one-medium uppercase">Overview</h3>
               <p>
-                The organization was founded by Mrs. Ethel Brogan, a native of Armagh,
-                Northern Ireland who learned Irish by spending one month each summer in the Gaeltacht.
-                She emigrated to New York City in 1946 and eventually moved to upstate New York.
-                In the United States, Brogan began teaching Irish classes for the benefit of interested neighbors.
-                In 1981, she arranged the first "Gaeltacht Weekend" in New York for students to improve their
-                Irish language skills through total immersion.
+                SIS are the leading provider of betting data and TV to high street bookmakers.  In fact the big 5 own
+                  large stakes in SIS Holdings.  If fact if you've ever been into the bookies for a little flutter then
+                  you wil have seen both SIS data and images.  SIS collected data track side which is sent back to a
+                  central data suite.  Once the data is verified it sent on to the wider world.  Some take this as is,
+                  others, mainly the big 5 use the feed as a sort of base rate so do their own alterations before send
+                  this on.
               </p>
+                <h3 class="font-accident-one-medium uppercase">Pride</h3>
+                <p>
+                    This is without doubt the hardest domain I've worked in.  The project had been can twice before and
+                    had been runner for 5 years.  The current team were in a state and with the relocation leaving at a
+                    rate of knots.  The contractors in place were not fit for purpose and so were replace outstanding
+                    engineers, Chris Herselman and Nap Catilio.  We spent the next 2 year battling, refactoring,
+                    rethinking, coding, drinking beer and achieving something one else had.  This wasn't the finest code base
+                    I've produced but it was best project.  The real cherry on the cake was the team we handed to were
+                    second to none.
+                </p>
+                <h3 class="font-accident-one-medium uppercase">Technologies</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul>
+                                <li>.Net 4.5</li>
+                                <li>MVC 4</li>
+                                <li>nHiberate 3</li>
+                                <li>Sql Server 2008</li>
+                                <li>TeamCity</li>
+                                <li>C++</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul>
+                                <li>Fake It Easy</li>
+                                <li>nUnit</li>
+                                <li>jQuery</li>
+                                <li>Castle Windsor</li>
+                                <li>Knockout</li>
+                                <li>StoryQ</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
           </div>
-
-
-
-
-
-
 
         </div>
       </div>
@@ -200,60 +229,57 @@
           </p>
           <div class="dividewhite3"></div>
 
-          <div id="posts" class="row">
+            <div id="posts" class="row">
+                <div id="1" class="item web col-md-3 nopadding">
+                    <div class="item-wrap">
+                        <figure class="effect-goliath">
+                            <img src="/images/ship-bow.jpg" alt="img03"/>
+                            <figcaption>
+                                <h3>Clarksons | <span>Arc</span></h3>
+                                <p>Voyage estimation and fixture management for brokering</p>
+                                <a href="/arc">View more</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
+                <div id="2" class="item marketing col-md-3 nopadding">
+                    <div class="item-wrap">
+                        <figure class="effect-goliath">
+                            <img src="/images/node-tracker-logo.jpg" alt="img11"/>
+                            <figcaption>
+                                <h3>Node | <span>Tracker</span></h3>
+                                <p>Marine Mammal Tracking Platform</p>
+                                <a href="/nodetracker">View more</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
 
-            <div id="1" class="item web col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/01.jpg" alt="img11"/>
-                  <figcaption>
-                    <h3>Music <span>Sounds</span></h3>
-                    <p>Mitrastigma was a monotypic genus of flowering plants in the </p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
+                <div id="3" class="item marketing col-md-3 nopadding">
+                    <div class="item-wrap">
+                        <figure class="effect-goliath">
+                            <img src="/images/double-helex.jpg" alt="img03"/>
+                            <figcaption>
+                                <h3>CRUK | <span>StratMed</span></h3>
+                                <p>Betting brokage platform for spread betting</p>
+                                <a href="/stratmed">View more</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
+                <div id="4" class="item web col-md-3 nopadding">
+                    <div class="item-wrap">
+                        <figure class="effect-goliath">
+                            <img src="/images/dogs.jpg" alt="img11"/>
+                            <figcaption>
+                                <h3>BetClearer | <span>Bento</span></h3>
+                                <p>Betting brokage platform for spread betting</p>
+                                <a href="/bento">View more</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
             </div>
-
-            <div id="2" class="item web col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/02.jpg" alt="img03"/>
-                  <figcaption>
-                    <h3>Fire <span>Burns</span></h3>
-                    <p>Red Rosa may refer to: Inga bella is a species of legume</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-            <div id="3" class="item marketing col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/03.jpg" alt="img11"/>
-                  <figcaption>
-                    <h3>Ice <span>Cold</span></h3>
-                    <p>Ciani's career begun when he won second prize at the Liszt-Bartók</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-
-            <div id="4" class="item marketing col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/04.jpg" alt="img03"/>
-                  <figcaption>
-                    <h3>Everybody <span>Lies</span></h3>
-                    <p>His repertoire was broad and diverse for a pianist of his age</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-
-          </div>
 
         </div>
       </div>
