--- a/views/stratmed.ejs
+++ b/views/stratmed.ejs
@@ -129,7 +129,7 @@
             <div class="col-md-12">
               <div class="row">
                 <div class="col-md-8">
-                  <img src="assets/custom/images/magazine/01.jpg" class="img-responsive" alt="img11"/>
+                  <img src="/images/double-helex-big.jpg" class="img-responsive" alt="img11"/>
                 </div>
                 <div class="col-md-4">
                   <div class="row">
@@ -139,20 +139,22 @@
                         <div class="infoblock">
                             <hr>
                             <ul>
-                                <li>Project Category: <span>Web Design</span></li>
-                                <li>Client: <span>Ergotron LLC</span></li>
-                                <li>Start Date: <span>11.14.2014</span></li>
-                                <li>End Date: <span>12.02.2014</span></li>
+                                <li>Project Category: <span>.Net | Bootstrap | AngularJS</span></li>
+                                <li>Client: <span>Cancer Research UK</span></li>
+                                <li>Start Date: <span>May 2014</span></li>
+                                <li>End Date: <span>Sept 2014</span></li>
                             </ul>
                         </div>
                         <h5 class="font-accident-one-medium uppercase">Project Features</h5>
                         <div class="infoblock">
                             <hr>
                             <ul class="list-o">
-                                <li>Sed laoreet lacinia eros et mattis.</li>
-                                <li>Etiam hendrerit</li>
-                                <li>Cras pharetra suscipit tempus.</li>
-                                <li>Sed laoreet lacinia eros et mattis.</li>
+                                <li>Creation and management of treatment centres</li>
+                                <li>Import of anonymized patient data</li>
+                                <li>Match of tumor DNA to targetted treatment</li>
+                                <li>Outcome auditing and reporting</li>
+                                <li>User management for external users</li>
+                                <li>IE6 no JS implementation for the NHS</li>
                             </ul>
                         </div>
                       </div>
@@ -170,23 +172,78 @@
           <div class="row">
             <div class="col-md-12">
               <h3 class="font-accident-one-medium uppercase">Overview</h3>
-              <p>
-                The organization was founded by Mrs. Ethel Brogan, a native of Armagh,
-                Northern Ireland who learned Irish by spending one month each summer in the Gaeltacht.
-                She emigrated to New York City in 1946 and eventually moved to upstate New York.
-                In the United States, Brogan began teaching Irish classes for the benefit of interested neighbors.
-                In 1981, she arranged the first "Gaeltacht Weekend" in New York for students to improve their
-                Irish language skills through total immersion.
-              </p>
+                <p>
+                    Cancer Research UK need no introductions as Europes largest charity.  Their research is only one strand
+                    of the work they do.  So you've got all these amazing new drugs, now you need to get them into patients
+                    but more importantly you need to get them in to the right patient.  Stratified medicine is the new way
+                    to treat cancer.  The old ways, chemotherapy and radiotherapy, are like using small thermonuclear devices
+                    to kill a platoon of the enemy, this is war you know.  The new way are surgical laser guilded munitions
+                    that kills only the bad guys.  The tumor is gene sequenced and drug selected that only targets the tumor
+                    and there is a lot less collateral damage.
+                </p>
+                <h3 class="font-accident-one-medium uppercase">Process</h3>
+                <p>
+                    While the StratMed team had decided to go down the agile methodology road there were a couple of stumbling
+                    blocks.  The first that was sorted was the absence of a estimation feedback loop in the sprint retrospectives.
+                    This had meant no sprints were atomic and users were not getting stuff when we said, this was easily solved.
+                </p>
+                <p>
+                    Fortunately the team had the foresight to implement some engineering practice inside scrum and were making
+                    a very good attempt at TDD red/green refactoring.  They had also started taking the functional spec
+                    and creating BDD feature in Fitnesse, however it was very time consuming with upto 30% of time per
+                    feature taken up implement acceptance test.  As these test were engineer led there was no need for Fitnesse
+                    and the test were moved to SpecFlow on my recommendation, much time was saved.
+                </p>
+                <h3 class="font-accident-one-medium uppercase">Implementation</h3>
+                  <p>
+                      I know, IE6 with no JS.  This wasn't as bad as it sounds as it was just flat HTML round tripping that was
+                      served by MVC 5 controllers.  As the IE6 version was for use by the NHS only a subset of functionality was
+                      needed there.  I joined the project about 25% into the IE6 implementation which we quickly finished off
+                      and moved onto the main bulk of a the implementation.
+                  </p>
+                <p>
+                    The previous project the team had delivered had used KendoUI MVVM implementation served by MVC controllers
+                    pumping out JSON.  While the Dataviz capability of Kendo were not in question the MVVM is not a good one.
+                    At this point I presented AngularJS/Jasmine/Angular-Kendo to the team and this was promptly adopted not
+                    just on StratMed but all future projects too.  The MVC controller were substituted with a web API and
+                    the rest was plain sailing, almost.
+                </p>
+                <p>
+                    The last stumbling block to over come was the actual gene matching process.  There were many suggestion
+                    made by scientist made over a number of months.  With the project on the brink of being canned I took
+                    matters into my own hands.  I contacted HUGO Gene Nomenclature Committee for advice.  As it turn out
+                    there are a number of genes to target, a number of prohibited genes that must not be targeted and one
+                    or more missing proteins that must be supplied.  It turned out to be a 4 line linq statement, never send
+                    a scientist to do an engineers job.
+                </p>
+                <h3 class="font-accident-one-medium uppercase">Technologies</h3>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul>
+                                <li>.Net 4.5</li>
+                                <li>Web Api 2.2</li>
+                                <li>Mvc</li>
+                                <li>Entity Framework 6</li>
+                                <li>Sql Server 2012</li>
+                                <li>Fake It Easy</li>
+                                <li>Autofac</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul>
+                                <li>nUnit</li>
+                                <li>Jasmine</li>
+                                <li>Karma</li>
+                                <li>AngularJS 1.3</li>
+                                <li>SpecFlow</li>
+                                <li>nMocks</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
           </div>
-
-
-
-
-
-
-
         </div>
       </div>
 
@@ -194,66 +251,63 @@
 
         <div class="container isotope-container">
 
-          <h3 class="font-accident-one-bold uppercase">Related Products</h3>
+          <h3 class="font-accident-one-bold uppercase">Related Projects</h3>
           <p>
-            The contribution winning the FACE award is selected by a jury from the entries in the <br>"Human Rights in Cinema" section of the festival. This includes both documentaries and feature <br>films investigating social change and individual dramas.
+              Here are some projects that use similar technologies
           </p>
           <div class="dividewhite3"></div>
 
-          <div id="posts" class="row">
+            <div id="posts" class="row">
+                <div id="1" class="item web col-md-3 nopadding">
+                    <div class="item-wrap">
+                        <figure class="effect-goliath">
+                            <img src="/images/ship-bow.jpg" alt="img03"/>
+                            <figcaption>
+                                <h3>Clarksons | <span>Arc</span></h3>
+                                <p>Voyage estimation and fixture management for brokering</p>
+                                <a href="/arc">View more</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
+                <div id="2" class="item marketing col-md-3 nopadding">
+                    <div class="item-wrap">
+                        <figure class="effect-goliath">
+                            <img src="/images/node-tracker-logo.jpg" alt="img11"/>
+                            <figcaption>
+                                <h3>Node | <span>Tracker</span></h3>
+                                <p>Marine Mammal Tracking Platform</p>
+                                <a href="/nodetracker">View more</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
 
-            <div id="1" class="item web col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/01.jpg" alt="img11"/>
-                  <figcaption>
-                    <h3>Music <span>Sounds</span></h3>
-                    <p>Mitrastigma was a monotypic genus of flowering plants in the </p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
+                <div id="3" class="item marketing col-md-3 nopadding">
+                    <div class="item-wrap">
+                        <figure class="effect-goliath">
+                            <img src="/images/dogs.jpg" alt="img03"/>
+                            <figcaption>
+                                <h3>BetClearer | <span>Bento</span></h3>
+                                <p>Betting brokage platform for spread betting</p>
+                                <a href="/bento">View more</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
+                <div id="4" class="item web col-md-3 nopadding">
+                    <div class="item-wrap">
+                        <figure class="effect-goliath">
+                            <img src="/images/racing-horse.jpg" alt="img11"/>
+                            <figcaption>
+                                <h3>SIS | <span>Editor</span></h3>
+                                <p>Betting feed manipulator for Dog and horse racing</p>
+                                <a href="/siseditor">View more</a>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </div>
             </div>
-
-            <div id="2" class="item web col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/02.jpg" alt="img03"/>
-                  <figcaption>
-                    <h3>Fire <span>Burns</span></h3>
-                    <p>Red Rosa may refer to: Inga bella is a species of legume</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-            <div id="3" class="item marketing col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/03.jpg" alt="img11"/>
-                  <figcaption>
-                    <h3>Ice <span>Cold</span></h3>
-                    <p>Ciani's career begun when he won second prize at the Liszt-Bartók</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-
-            <div id="4" class="item marketing col-md-3 nopadding">
-              <div class="item-wrap">
-                <figure class="effect-goliath">
-                  <img src="assets/custom/images/magazine/04.jpg" alt="img03"/>
-                  <figcaption>
-                    <h3>Everybody <span>Lies</span></h3>
-                    <p>His repertoire was broad and diverse for a pianist of his age</p>
-                    <a href="portfolio-item.html">View more</a>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-
-          </div>
 
         </div>
       </div>
