first cut of the whole site

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -565,7 +565,8 @@
               <p>
                 Building responsive cross platform rich front ends has never been easier.  Creating well structured JS has been a problem for
                 years but the last 5years has seen small revolution with really good SPA frameworks coming of age.  When you add Bootstrap themes
-                over the top you can get great looking
+                over the top you can get great looking for minimum effort.  I've been doing MVC development for a while now and JS for even longer,
+                  so doing them together in the browser with HTML5 is a really plesurable way to work.
               </p>
             </div>
           </div>
@@ -577,7 +578,10 @@
               <h4 class="font-regular-normal">Web API & NodeJS</h4>
               <div class="dividewhite1"></div>
               <p>
-                With more devices come varying screen resolutions, definitions and orientations. New devices with new screen sizes are being developed every day, and each of these devices may be able to handle variations in size, functionality and even color.
+                Forget SOAP, JSON is king now.  I started out the OpenRaster a while ago and it did have it's pain point,
+                  Web API removed all that.  I a big fan of loose coupling and I'm always pleasantly surprised when an
+                  API I created for a rich front end is reused else were. I'm new to Node but it all feels so familiar
+                  and I'm hoping to get my first Node addon done soon, maybe for <a href="\nodetracker">Node Tracker</a>
               </p>
             </div>
           </div>
@@ -589,7 +593,11 @@
               <h4 class="font-regular-normal">ORM & No SQL</h4>
               <div class="dividewhite1"></div>
               <p>
-                One major problem that needs to be solved with responsive Web design is working with images. There are a number of techniques to resize images proportionately, and many are easily done.
+                I hate magic SQL strings, I was made to do it is an ASP classic project.  The first ORM I used was SubSonic
+                  but I quickly moved onto nHibernate and to be truthful it still my favorite because, in my humble opinion,
+                  I feel I can do more with it, turning, sequencing, etc.  My first experience with No SQL was the SterlingDB
+                  for Silverlight and loved it.  I'm just starting my journey on the MEAN stack but because of my love of maps
+                  it wont be long before I hit Neo4j.
               </p>
             </div>
           </div>
@@ -604,7 +612,10 @@
               <h4 class="font-regular-normal">TDD & BDD</h4>
               <div class="dividewhite1"></div>
               <p>
-                For extreme size changes, we may want to change the layout altogether, either through a separate style sheet or, more efficiently, through a CSS media query.
+                One thing hate more than magic SQL strings is bugs. For the love of me I can not understand why more
+                  engineering departments are TDD based, it much more cost effective and just a nicer way to work.  Then
+                  came BDD, wow.  Now I can have a requirement I compile and run against my code. Finally we have a definative
+                  definition of done.  If my BDD feature passes and I'm committed (and the CI/CD passes) I'm done.
               </p>
             </div>
           </div>
@@ -616,7 +627,11 @@
               <h4 class="font-regular-normal">Principled Development</h4>
               <div class="dividewhite1"></div>
               <p>
-                It is possible to shrink things proportionally and rearrange elements as necessary to make everything fit (reasonably well) as a screen gets smaller.
+                This sounds a bit washy but when done right it really works.  Good practices make better code but things
+                  like SOLID, KISS, YAGNI and DRY arn't applied as much as they should be, Marry Liskov would not be pleased.
+                  Do this right though is hard, one doesn't always hit the mark but if you start from the fact we all write
+                  bad code from time to time and it can be changed you should end up with something that stands the test of
+                  time.
               </p>
             </div>
           </div>
@@ -628,7 +643,11 @@
               <h4 class="font-regular-normal">Team Work</h4>
               <div class="dividewhite1"></div>
               <p>
-                Below we have a few examples of responsive Web design in practice today. For many of these websites, there is more variation.
+                No one is an Island.  I worked at home in a team of one for 2 years, never again.  If you walk into an
+                  engineering department and you can hear a pin drop then something is wrong.  Engineers need to speak to
+                  each other (and I don't mean messaging), that how we solve the impossible, together and normally laterally.
+                  We have our own 'Do Not Disturb' signs, normally headphones but if we're not communicating meanfully we
+                  dead in the water.
               </p>
             </div>
           </div>
