--- a/views/nodetracker.ejs
+++ b/views/nodetracker.ejs
@@ -129,7 +129,7 @@
             <div class="col-md-12">
               <div class="row">
                 <div class="col-md-8">
-                  <img src="assets/custom/images/magazine/01.jpg" class="img-responsive" alt="img11"/>
+                  <img src="/images/node-tracker-logo.jpg" class="img-responsive" alt="img11"/>
                 </div>
                 <div class="col-md-4">
                   <div class="row">
@@ -139,20 +139,19 @@
                         <div class="infoblock">
                             <hr>
                             <ul>
-                                <li>Project Category: <span>Web Design</span></li>
-                                <li>Client: <span>Ergotron LLC</span></li>
-                                <li>Start Date: <span>11.14.2014</span></li>
-                                <li>End Date: <span>12.02.2014</span></li>
+                                <li>Project Category: <span>NodeJS | Bootstrap| ExpressJS | AngularJS</span></li>
+                                <li>Client: <span>Open Source</span></li>
+                                <li>Start Date: <span>23.09.2014</span></li>
+                                <li>End Date: <span>on going</span></li>
                             </ul>
                         </div>
                         <h5 class="font-accident-one-medium uppercase">Project Features</h5>
                         <div class="infoblock">
                             <hr>
                             <ul class="list-o">
-                                <li>Sed laoreet lacinia eros et mattis.</li>
-                                <li>Etiam hendrerit</li>
-                                <li>Cras pharetra suscipit tempus.</li>
-                                <li>Sed laoreet lacinia eros et mattis.</li>
+                                <li>Sighting/Tracking management</li>
+                                <li>Voyage plotting and analysis</li>
+                                <li>Influencing event management</li>
                             </ul>
                         </div>
                       </div>
@@ -171,12 +170,10 @@
             <div class="col-md-12">
               <h3 class="font-accident-one-medium uppercase">Overview</h3>
               <p>
-                The organization was founded by Mrs. Ethel Brogan, a native of Armagh,
-                Northern Ireland who learned Irish by spending one month each summer in the Gaeltacht.
-                She emigrated to New York City in 1946 and eventually moved to upstate New York.
-                In the United States, Brogan began teaching Irish classes for the benefit of interested neighbors.
-                In 1981, she arranged the first "Gaeltacht Weekend" in New York for students to improve their
-                Irish language skills through total immersion.
+                  OK, I like playing with maps. In reality this could be used lay in lats and longs and track anything.
+                  Who doesn't like <strike>Wales</strike> whales so I'm building it around this domain to start with.</p>
+                <p>
+                  It is open source, not a lot there at the moment but here is where you can find it <a href="https://github.com/jolySoft/nodetracker">here</a>
               </p>
             </div>
           </div>
