--- a/views/website.ejs
+++ b/views/website.ejs
@@ -174,7 +174,7 @@
                 I've been doing .Net for years now and it's time for a change.  I've also been doing JavaScript for
                   almost 20 years too and it's a really exciting time for JS so it's time to join the party.  I'm start
                   an <a href="/nodetracker">open source project</a> but here I can play.  So over the coming months I
-                  will slowly make the site more dynamic.
+                  will slowly make the site more dynamic. It's also hosted on Heroku too which is also something new for me.
               </p>
                 <p>
                     This site is open source too, you can find the code <a href="https://github.com/jolySoft/webenabled.tv">here</a>
